--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="mainBGColor">#BBCAF1</color>
+    <color name="mainBGColor">#FFFFFF</color>
 
     <color name="cardBgColor">#f6f6f6</color>
     <color name="titleTextColor">#258bd6</color>
