--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,12 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#258bd6</color>
     <color name="mainBGColor">#FFFFFF</color>
+    <color name="mainBGNightColor">#000000</color>
 
     <color name="cardBgColor">#f6f6f6</color>
+    <color name="cardBgNightColor">#0e0e0e</color>
     <color name="titleTextColor">#258bd6</color>
     <color name="contentTextColor">#999da4</color>
     <color name="avatarBgColor">#B0B5BC</color>
